--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>GH Gists by sayak-brm</title>
 	<script src="https://cdn.tailwindcss.com" id="external-js"></script>
 </head>
 
